changed mobile back to homescreen instead of links, changed background, need to fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,10 +5,12 @@
 @layer base {
   :root {
 
-    --custom-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     --background: 0 0% 99%;
     --foreground: 222.2 84% 4.9%;
     --custom-background-opacity: 225,235,235,0.9;
+
+    --bg-grid-line-bg: hsla(0, 0%, 86%, 0.2);
+    --bg-tint: #ebefea;
 
     --card: 200, 200, 200, 0.2;
     --card-foreground: 0 0% 80%;
@@ -39,7 +41,6 @@
   }
  
   .dark {
-    --custom-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     --background: 0 0% 9%;
     --custom-background-opacity: 23,23,23,.99;
 
@@ -81,20 +82,28 @@
   }
 }
 
-.bg-custom-gradient {
-  position: relative;
-  background-size: 10px 10px;
-  background-image:
-    linear-gradient(to right, rgb(214, 214, 214) 1px, transparent .5px),
-    linear-gradient(to bottom, rgb(206, 206, 206) 1px, transparent .5px);
+
+
+body {
+  font-family: 'Inter', sans-serif;
+  background:
+    linear-gradient(-90deg, var(--bg-grid-line-bg) 1px, transparent 1px),
+    linear-gradient(var(--bg-grid-line-bg) 1px, transparent 1px), 
+    linear-gradient(-90deg, var(--bg-grid-line-bg) 1px, transparent 1px),
+    linear-gradient(var(--bg-grid-line-bg) 1px, transparent 1px),
+    linear-gradient(transparent 3px, var(--bg-tint) 3px, var(--bg-tint) 78px, transparent 78px),
+    linear-gradient(-90deg, #d7d7d7 1px, transparent 1px),
+    linear-gradient(-90deg, transparent 3px, var(--bg-tint) 3px, var(--bg-tint) 78px, transparent 78px),
+    linear-gradient(#d7d7d7 1px, transparent 1px), 
+    #f2f2f2;
+  background-size:
+    10px 10px,
+    10px 10px,
+    80px 80px,
+    80px 80px,
+    80px 80px,
+    80px 80px,
+    80px 80px,
+    80px 80px;
 }
 
-.bg-custom-gradient::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(var(--custom-background-opacity));
-}
